2007-04-10  Matthew Allum  <mallum@openedhand.com>

	reviewed by: <delete if not using a buddy>

	* Makefile.in.in:
